[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", default-features = false, features = ["std"] }
rand_chacha = "0.3.1"
include_bytes_aligned = "0.1.2"

[features]
default = ["print-trace"]
print-trace = []